bevy_gpu_compute_macro/tests/ui/incorrect_vec_construction.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/incorrect_vec_construction.rs:6:3
  |
6 | };
  |   ^ consider adding a `main` function to `$DIR/tests/ui/incorrect_vec_construction.rs`

error[E0639]: cannot create non-exhaustive struct using struct expression
 --> tests/ui/incorrect_vec_construction.rs:2:28
  |
2 |   const MY_CONST: Vec3Bool = Vec3Bool {
  |  ____________________________^
3 | |     x: true,
4 | |     y: false,
5 | |     z: true,
6 | | };
  | |_^
