bevy_gpu_compute_macro/tests/ui/incorrect_vec_construction.rs
use bevy_gpu_compute_core::wgsl_helpers::*;
const MY_CONST: Vec3Bool = Vec3Bool {
    x: true,
    y: false,
    z: true,
};
